// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays the PartTypeEdit component for a new part type with no attributes 1`] = `
<React.Fragment>
  <td>
    <Icon
      as="i"
      name="add"
      onClick={[Function]}
    />
  </td>
  <td>
    <PartTypeData
      componentKey="new"
      handlePartTypeValueChange={[Function]}
      partType={
        Object {
          "_detail": true,
          "can_be_omitted": true,
          "can_be_substituted": false,
          "customer_facing": true,
          "dummyKey": "new",
          "shortName": "part one",
        }
      }
    />
  </td>
</React.Fragment>
`;

exports[`displays the PartTypeEdit component for an existing part type with attributes, detail hidden 1`] = `
<React.Fragment>
  <td>
    <Icon
      as="i"
      name="toggle right"
      onClick={[Function]}
    />
  </td>
  <td>
    <PartTypeData
      componentKey="21"
      handlePartTypeValueChange={[Function]}
      partType={
        Object {
          "_detail": false,
          "can_be_omitted": true,
          "can_be_substituted": false,
          "customer_facing": true,
          "id": 21,
          "shortName": "part one",
        }
      }
    />
  </td>
</React.Fragment>
`;

exports[`displays the PartTypeEdit component for an existing part type with attributes, detail shown 1`] = `
<React.Fragment>
  <td>
    <Icon
      as="i"
      name="toggle down"
      onClick={[Function]}
    />
  </td>
  <td>
    <PartTypeData
      componentKey="dummy2"
      handlePartTypeValueChange={[Function]}
      partType={
        Object {
          "_detail": true,
          "attributes": Array [
            "attribute1",
            "attribute2",
          ],
          "can_be_omitted": true,
          "can_be_substituted": false,
          "customer_facing": true,
          "dummyKey": "dummy2",
          "shortName": "part one",
        }
      }
    />
  </td>
</React.Fragment>
`;
